# ocpp-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: download_docs.py
src/ocpp_rag/: chunk.py  config.py  extract_archives.py  index.py  mcp_server.py  parse.py  query.py
src/ocpp_rag/data/: appendices.json  schemas.json
src/ocpp_rag/data/figures/: _manifest.json
src/ocpp_rag/data/ocpp16/: j.json  spec.json
src/ocpp_rag/data/ocpp201/: errata.json  part0.json  part1.json  part2_other.json  part4.json  part5.json  part6.json
src/ocpp_rag/data/ocpp201/appendices/: ocpp201_appendices.json  ocpp201_part2_appendices.json
src/ocpp_rag/data/ocpp201/blocks/: Authorization.json  Availability.json  CertificateManagement.json  Diagnostics.json  DisplayMessage.json  FirmwareManagement.json  LocalAuthorizationListManagement.json  MeterValues.json  Provisioning.json  RemoteControl.json  Reservation.json  Security.json  SmartCharging.json  TariffAndCost.json  Transactions.json
src/ocpp_rag/data/ocpp201/messages/: _all.json
src/ocpp_rag/data/ocpp201/schemas/: AuthorizeRequest.json  AuthorizeResponse.json  BootNotificationRequest.json  BootNotificationResponse.json  CancelReservationRequest.json  CancelReservationResponse.json  CertificateSignedRequest.json  CertificateSignedResponse.json  ChangeAvailabilityRequest.json  ChangeAvailabilityResponse.json  ClearCacheRequest.json  ClearCacheResponse.json  ClearChargingProfileRequest.json  ClearChargingProfileResponse.json  ClearDisplayMessageRequest.json  ClearDisplayMessageResponse.json  ClearVariableMonitoringRequest.json  ClearVariableMonitoringResponse.json  ClearedChargingLimitRequest.json  (+109 more)
src/ocpp_rag/data/other/: california_pricing.json  eichrecht.json  ocpp16_security.json  ocpp2_lite.json  pnc_whitepaper.json  security_ops_guide.json  whats_new_201.json
tests/: conftest.py  test_chunk.py  test_config.py  test_end_to_end.py  test_extract_archives.py  test_index.py  test_mcp_server.py
(+119 files in other folders)
